--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             </select>
 
             <div class="footer-bottom">
-                <p>Netflix Clone - For Educational Purposes Only</p>
+                <p>Netflix </p>
                 <p>© 2024 Netflix, Inc. All rights reserved.</p>
                 <p>100 Winchester Circle, Los Gatos, CA 95032, USA</p>
             </div>
